cargo-features = ["workspace-inheritance"]

[package]
name = "hyperlane-cli"
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive"] }
ethers.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-futures.workspace = true

hyperlane-core = { path = "../hyperlane-core", features = ["ethers", "async"] }

[build-dependencies]
ethers.workspace = true
